# web-python-lab-1-lost-and-found

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
migration/: env.py
migration/versions/: 270f2ac325b0_initial.py
src/entrypoints/: lost_and_found_asgi.py
src/lost_and_found/: app.py  config.py
src/lost_and_found/adapters/filters/: base.py  comments_filter.py  post_filters.py
src/lost_and_found/adapters/models/: base.py  comment.py  feedback_message.py  post.py  user.py
src/lost_and_found/adapters/orm/: __init__.py  base.py  comment.py  feedback_message.py  post.py  user.py
src/lost_and_found/adapters/repos/: base.py  comment_repo.py  feedback_message_repo.py  post_repo.py  user_repo.py
src/lost_and_found/adapters/services/: lost_and_found_service.py
src/lost_and_found/api/dependencies/: auth.py  services.py
src/lost_and_found/api/v1/: routers.py
src/lost_and_found/api/v1/admin/views/: admin.py
src/lost_and_found/api/v1/client/: routers.py
src/lost_and_found/api/v1/client/views/: auth.py  comments.py  contacts.py  home.py  post_views.py
src/lost_and_found/extensions/: db.py
src/lost_and_found/templates/: addcomment.j2  addpost.j2  base.j2  contacts.j2  homepage.j2  loginpage.j2  postlist.j2  registerpage.j2  showpost.j2
src/lost_and_found/templates/auth/: loginpage.j2  registerpage.j2
src/lost_and_found/templates/comment/: addcomment.j2
src/lost_and_found/templates/home/: homepage.j2
src/lost_and_found/templates/post/: addpost.j2  postlist.j2  showpost.j2
src/lost_and_found/templates/static/: styles.css
