[tool.poetry]
name = "web-python-lab-1"
version = "0.1.0"
description = ""
authors = ["Roxan1hor333 <Roxan1hor333@gmail.com>"]
readme = "README.md"
packages = [{include = "web_python_lab_1"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
sqlalchemy = "^2.0.28"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
